manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-add-tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: add-tasks
  template:
    metadata:
      labels:
        app: add-tasks
    spec:
      containers:
      - name: add-tasks
        image: devopsinsiders/add-task
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
