manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-add-tasks-service
spec:
  type: ClusterIP
  selector:
    app: add-tasks
  ports:
  - port: 8000
    targetPort: 80
