manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-add-tasks
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: add-tasks.shivamsharma.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoapp-add-tasks-service
            port: 
              number: 80
